# 3D_renderer_prototype

./: CMakeLists.txt  cfg.h  color.h  main.cpp  main.h  mesh.h  perFaceLighting.cpp  perFaceLighting.h  perPixelLighting.cpp  perPixelLighting.h  perVertexLighting.cpp  perVertexLighting.h  triangleBoundingBox.cpp  triangleBoundingBox.h  triangleMidpointTraversal.cpp  triangleMidpointTraversal.h  vec3f.h
exporter/: prototype_exporter.ms
